UPDATE: fix main overflow.

--- a/scss/critical.scss
+++ b/scss/critical.scss
@@ -27,12 +27,7 @@ body {
       --themeColor: var(--yellow);
     }
 
-&[data-theme='home'] {
-  main {
-  overflow-x: hidden;
 
-  }
-}
 
 
 
