--- a/scss/utilities/_layouts.scss
+++ b/scss/utilities/_layouts.scss
@@ -53,7 +53,7 @@ display: grid;
   display: flex;
   align-items: center;
   gap: var(--space-2xs);
-  font-size: var(--step-0);
+  font-size: var(--step--1);
 img {
   display: inline;
 }
